--- a/src/app/svg-logo/svg-logo.component.scss
+++ b/src/app/svg-logo/svg-logo.component.scss
@@ -4,16 +4,16 @@
   display: block;
 
   @include mobile {
-    margin-left: 32rem;
+    margin-left: 32px;
   }
 }
 
 svg {
-  height: 20rem;
-  width: 100rem;
+  height: 20px;
+  width: 100px;
 
   @include desktop {
-    height: 32rem;
-    width: 160rem;
+    height: 32px;
+    width: 160px;
   }
 }
