--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,17 @@
-<p>form works!</p>
+<form>
+  <h1 class="title">
+    <span class="title-head">we're</span><br>coming<br>soon
+  </h1>
+  <p class="body">
+    Hello fellow shoppers! We're currently building our new fashion store.
+    Add your email below to stay up-to-date with announcements and our launch deals.
+  </p>
+  <div class="input-box">
+    <input type="email" placeholder="Email Address">
+    <button>
+      <svg viewBox="0 0 12 20" fill="none">
+        <path d="M1 1L9.83566 9.83566L1 18.6713" stroke="white" stroke-width="2" />
+      </svg>
+    </button>
+  </div>
+</form>
