--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -9,3 +9,11 @@
     @content;
   }
 }
+
+$palette: (
+  black: #423A3A,
+  text: #CE9898,
+  light-text: #CE989880,
+);
+
+$gradient: linear-gradient(135deg, #F8BFBF, #EE8B8B);
