refactor: rename images

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,6 +1,6 @@
 <picture>
-  <source media="(min-width: 768px)" [srcset]="getSrcSet('hero-desktop.png')" sizes="" width="610"
+  <source media="(min-width: 768px)" [srcset]="getSrcSet('hero-610x800.png')" sizes="" width="610"
       height="800">
-  <img class="hero" ngSrc="hero-mobile.png" sizes="" width="375" height="250" priority
+  <img class="hero" ngSrc="hero-375x250.png" sizes="" width="375" height="250" priority
       alt="Beautiful woman wearing a sunset apricot shirt and a golden bracelet.">
 </picture>
