feat: button title

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -10,7 +10,7 @@
     <input type="email" name="email" #email="ngModel" email ngModel required spellcheck="false"
         placeholder="Email Address">
     <svg-error *ngIf="email.errors?.['email']"></svg-error>
-    <button [disabled]="email.errors">
+    <button [disabled]="email.errors" title="Register email address">
       <svg viewBox="0 0 12 20" fill="none">
         <path d="M1 1L9.83566 9.83566L1 18.6713" stroke="white" stroke-width="2" />
       </svg>
