fix: missing height

--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -28,6 +28,7 @@ form {
   @include desktop {
     font-size: 64rem;
     line-height: 71rem;
+    height: 196rem;
     letter-spacing: 17.3rem;
   }
 
